# pydelta

./: .gitignore  Delta-Intro.ipynb  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
delta/: __init__.py  cluster.py  corpus.py  deltas.py  graphics.py  util.py
docs/: CustomizingPipeline.ipynb  GettingStarted.ipynb  delta.rst
test/: conftest.py  corpus_test.py  deltas_test.py  test_issue6.py
