[tool.poetry]
name = "delta"
version = "2.1.0.dev1"
description = "Stylometry toolkit"
authors = [
    "Thorsten Vitt <thorsten.vitt@uni-wuerzburg.de>",
    "Fotis Jannidis <fotis.jannidis@uni-wuerzburg.de>"
    ]
license = "GPL-3.0-or-later"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.20.3"
pandas = "^1.2.4"
scipy = "^1.6.3"
matplotlib = "^3.4.2"
regex = "^2021.4.4"
scikit-learn = "^0.24.2"
scikit-learn-extra = "^0.2.0"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.0.2"
ipykernel = "^5.5.5"
nbsphinx = "^0.8.6"
pytest-notebook = "^0.6.1"
# jupyter-client versions >=6.1.13,<7.0 exhibit a bug with pytest-notebook and have
# been yanked <https://github.com/jupyter/jupyter_client/issues/637>, but poetry
# does not support yanked packages yet, so until jupyter-client 7 is released:
jupyter-client = "<6.1.13"

[tool.pytest.ini_options]
addopts = "--doctest-modules --junit-xml pytest.xml --cov=delta --cov-report=html --cov-report=xml"
nb_diff_ignore = "/cells/*/outputs"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
